--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
