--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "date-fns": "^3.6.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.52.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
