--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.2.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
